--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div id="popover-root"></div>
+    <div id="snackbarRoot"></div>
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
