--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <div id="popover-root"></div>
     <div id="snackbarRoot"></div>
+    <div id="modalRoot"></div>
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
